# sql_to_pypika

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
scripts/: run_all.sh  run_coverage.sh  run_linter.sh
sql_to_pypika/: cli.py  evaluator.py  lexer.py  parser.py
tests/: test_evaluator.py
